--- a/PrimeNumberApp.Tests/PrimeNumberApp.Tests.csproj
+++ b/PrimeNumberApp.Tests/PrimeNumberApp.Tests.csproj
@@ -53,6 +53,16 @@
     <Compile Include="PrimeNumberGeneratorClassShould.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PrimeNumberApp.Core\PrimeNumberApp.Core.csproj">
+      <Project>{832a5ea3-21b0-4f0a-a071-c118dc32fb18}</Project>
+      <Name>PrimeNumberApp.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PrimeNumberApp.Operations\PrimeNumberApp.Operations.csproj">
+      <Project>{03cad74a-8260-41fc-8293-03f9402a4fef}</Project>
+      <Name>PrimeNumberApp.Operations</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
