--- a/PrimeNumberApp.Core/PrimeNumberApp.Core.csproj
+++ b/PrimeNumberApp.Core/PrimeNumberApp.Core.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Interface1.cs" />
     <Compile Include="IPrimeNumberGenerator.cs" />
+    <Compile Include="ITestPrime.cs" />
     <Compile Include="PrimeNumberResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
