--- a/PrimeNumberApp.Tests/PrimeNumberApp.Tests.csproj
+++ b/PrimeNumberApp.Tests/PrimeNumberApp.Tests.csproj
@@ -52,6 +52,8 @@
   <ItemGroup>
     <Compile Include="PrimeNumberGeneratorClassShould.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="DivideByPrimeNumbersInLoopMethodClassShould.cs" />
+    <Compile Include="SieveOfEratosthenesClassShould.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PrimeNumberApp.Core\PrimeNumberApp.Core.csproj">
